# unitree-robot

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  Untitled.ipynb  explore.ipynb  main.py  notebook.py  pyproject.toml  pyproject.toml.old  test.ipynb  test_notebook.ipynb  train.py  unitree-sdk-bridge-copy.py
.ipynb_checkpoints/: notebook-checkpoint.py
conf/: config.yaml
conf/agent/: default.yaml  ppo-v1.yaml
conf/environment/: default.yaml  g1-flat_terrain.yaml  go2-flat_tarrain.yaml  go2-flat_terrain-menagerie.yaml  go2-flat_terrain.yaml
conf/experiment/: standing_up-v1.yaml
conf/training/: default.yaml  large.yaml  multi_unroll_test.yaml  small.yaml  standard_training.yaml  standing_up_training.yaml
scripts/: config-lan-linux.sh  config-lan-windows.ps1  instantiate-environment.sh
src/common/: agents.py  datastructure.py  environments.py  experiments.py  networks.py  util.py
src/dev/: main.py
src/legacy/: cyclonedds.xml  trainer.py
src/unitree_robot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stages/dev/: pyproject.toml
stages/prod/: pyproject.toml
stages/train/: pyproject.toml
tests/: test_common.py
unitree_robot/common/: agents.py  brax_common.py  cdds.py  controler.py  cyclonedds_helper.py  datastructure.py  environments.py  experiments.py  networks.py  rewards.py  robot.py  util.py
unitree_robot/dev/: brax_envs.py  brax_generte.py  main.py  mjcf_to_usd.py  usd_files.py  usd_to_mjcf.py  usd_to_urdf.py
unitree_robot/legacy/: cdds.py  trainer.py
unitree_robot/train/: agents.py  brax_env.py  environments.py  experiments.py  loss_functions.py  rewards.py  test_pytorch_training.py  training.py
unitree_robot/training/: environments.py  experiments.py  rewards.py  trainer.py
