[project]
name = "unitree_robot"
version = "0.1.0"
description = ""
authors = [
    {name = "freya",email = "freya.aino@pm.me"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    # "cyclonedds==0.10.2",
    "pydantic (>=2.11.9,<3.0.0)",
    "torch (>=2.9.0,<3.0.0)",
]

[tool.poetry.scripts]
test = "pytest:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"
# brax = "^0.13.0"
# warp-lang = "^1.9.0"
scipy = ">=1.15,<2.0"
tqdm = ">=4.67.1,<5.0.0"
jedi = "^0.19.2"
# nvidia-srl-usd-to-urdf = "^1.0.3"
mujoco = "^3.3.6"
mujoco-mjx = "^3.3.6"
marimo = {extras = ["mcp"], version = "^0.17.0"}
polars = "^1.34.0"
mediapy = "^1.2.4"
torch = {source = "cuda"}
jupyterlab = "^4.4.10"
# numpy-quaternion = "^2024.0.12"
# notebook = "^7.4.7"
mlflow = "^3.5.1"
flatten-dict = "^0.4.2"
hydra-core = "^1.3.2"
gymnasium = {extras = ["mujoco"], version = "^1.2.2"}
jax = {extras = ["cuda"], version = "^0.8.0"}
torch2jax = "^0.1.0"
warp-lang = "^1.10.0"

[[tool.poetry.source]]
name = "cuda"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
