[project]
name = "unitree-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.0",
    "jax[cpu] ; sys_platform == 'win32'",
    "jax[cuda13] ; sys_platform == 'linux'",
    "mlflow>=3.5.1",
    "warp-lang>=1.10.0",
    "mujoco-mjx>=3.3.7",
    "tqdm>=4.67.1",
    "hydra-core>=1.3.2",
    "flatten-dict>=0.4.2",
    "nvidia-ml-py>=13.580.82",
    "torchrl>=0.10.1",
    "psutil>=7.1.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cuda-13" }

[[tool.uv.index]]
name = "pytorch-cuda-13"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "jupyterlab>=4.4.10",
    "mediapy>=1.2.4",
    "mujoco-python-viewer>=0.1.4",
]
